fix bugs in color and alignment

--- a/src/components/markdown/align.css
+++ b/src/components/markdown/align.css
@@ -3,10 +3,12 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    text-align: center;
 }
 
 .align-right {
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    text-align: right;
 }
